index.css
@font-face {
    font-family: 'OrangeJuice';
    src: url('fonts/OrangeJuice.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

/* Farbeinstellungen */
:root {
    --primarycolor: #212c4d;
    --secondarycolor: #ff4500;
    --linkcolor: #fafafa;
    --backgroundcolor0: black;
    --backgroundcolor1: white;
    --backgroundcolor2:#fafafa;
    --headercolor: #07102D;
    --alertcolor: #ff4500;
    --footercolor: #333;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
    scroll-behavior: smooth;
}

html, body {
    height: 100%;
}

body {
    font-family: Arial, sans-serif;
    line-height: 1.6;
    background-color: var(--backgroundcolor1);
    overflow-x: hidden;
}

.introImage {
    position: absolute;
    left: 0;
    width: 40vw;
    z-index: 102;
    height: auto;
    animation: wander 2s ease-in-out forwards;
}

.speak {
    margin: 150vh 0;
    &:first-child {
      margin-top: -50vh;
    }
}

.speak h1 {
    color: white;
    font-size: 4rem;
}
  
.speak[data-scroll] {
    transition: opacity .3s;
    transform: translatey(calc(var(--viewport-y) * 30vh));
    opacity: calc(var(--visible-y));
}

.introWall {
    position: fixed;
    top: 0;
    display: flex;
    align-items: center;
    width: 100vw;
    height: 100%;
    background: var(--headercolor);
    z-index: 101;
    animation: backgroundbye 2s ease-in-out forwards;
}

@keyframes backgroundbye {
    90%{
        opacity: 1;
    }
    100% {
        opacity: 0;
    }
}

@keyframes wander {
    0% {
        transform: translateX(0);
    }
    25%{
        transform: translate(30vw);
    }
    /* Beginn der Shaking-Animation */
    35%, 45%{
        transform: translate(30vw) rotate(5deg);
    }
    40%, 50% {
        transform: translate(30vw) rotate(-5deg);
    }
    55% {
        transform: translate(30vw) rotate(0deg);
    }
    /* Ende der Shaking-Animation */
    75%{
        transform: translate(30vw);
    }
    100% {
        transform: translateX(100vw);
    }
}

/* h1 */
h1 {
    font-size: clamp(0.7rem,5vw,1.5rem);
    text-align: center;
}

h2, h3 {
    font-size: clamp(1rem,3vw,3.5rem);
    text-align: center;
}

h1, h2, h3, h4, h5, h6, p {
    color: var(--primarycolor)
}

.part-1 h1, .part-1 h2, .part-1 h3, .part-1 h4, .part-1 h5, .part-1 h6{
    color: var(--backgroundcolor2);
}

.part-2 h1, .part-2 h2, .part-2 h3, .part-2 h4, .part-2 h5, .part-2 h6{
    color: var(--backgroundcolor2);
}

a {
    color: var(--linkcolor);
    font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
}

/* Header */
header {
    background: var(--headercolor);
    color: #fff;
    text-align: center;
}

header.sticky {
    position: fixed;
    top: 0;
    z-index: 100;
    width: 100%;
}

/* Logo */
.navigation .logo {
    width: clamp(45px, 7vw, 60px);
    height: clamp(45px, 7vw, 60px);
    float: left;
    margin-left: 20px;
    padding: 0;
}
a.logo img {
    width: 100%;
    height: 100%;
}

/* Navigation */
.navigation a {
    color: var(--linkcolor);
    text-decoration: none;
    padding: 10px 10px;
    display: inline-block;
    font-size: clamp(1rem,2.5vw,1.5rem);
}

.navigation a:hover {
    background: #555;
}

.kontakt {
    float: right;
    margin-right: 20px;
}

/* Main Content */
main {
    margin: 60px 0 0 0;
    background-color: var(--backgroundcolor);
}

.scrolling-element {
    position: relative;
}
@media only screen and (min-width:1200px) {
    .parallaxIntroduction {
        /* Create the parallax scrolling effect */
        background-attachment: fixed;
        background-repeat: no-repeat;
        background-size: cover;
    }
}

.parallaxIntroduction {
    background-image: url("assets/introbild0.webp");
    min-height: 100vh;
    text-align: center;
    background-position: center;
  }

.textParallaxIntroduction {
    display: inline-block;
}

.textParallaxIntroduction h2 {
    margin-top: 30%;
    font-size: clamp(2rem, 5vw, 5rem);
}

.textParallaxIntroduction p {
    font-size: 1.5rem;
    font-weight: bold;
    border-radius: 15px;
    padding: 0 20px;
    margin-top: 2%;
}


.part-1, .part-2, .part-3 {
    margin-bottom: 20px;
    padding: 20px;
    min-height: 80vh;
    scroll-margin-top: 60px;
}

.part-1 {
    /*background-color: var(--backgroundcolor0);*/
    background-image: url(assets/background-work0.webp);
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-size: cover;
}

.part-2 {
    background-image: url(assets/background-private0.webp);
    background-repeat: no-repeat;
    background-size: cover;
}

.part-3 {
    background-color: var(--backgroundcolor2);
}

/* For later - idea
@media only screen and (min-width: 1300px) {
    .part-3 {
        overflow-y: scroll;
    }
    footer {
        display: none;
    }
}
*/

/* Two sides in part-1 */
.left-side {
    width: 65%;
    float: left;
    padding: 10px 0;
    display: flex;
    flex-direction: column;
}

.right-side {
    width: 35%;
    float: left;
    padding: 10px 0;
}

.side-by-side {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    margin: 20px;
}

.box-details {
    width: 100%;
    max-width: 35%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.box-details p {
    font-weight: bold;
    font-size: clamp(0.7rem,1vw,1.5rem);
    border-radius: 10px;
    color: black;
    padding: 10px;
    text-align: center;
    box-shadow: rgba(0,0,0,0.07000000000000001) 0px 8px 10px 1px, rgba(0,0,0,0.06) 0px 3px 14px 2px, rgba(0,0,0,0.1) 0px 5px 5px -3px;
}

.box-details.work p {
    background: lightyellow;
}
.box-details.private p {
    background: lightpink;
}

.box-video {
    height: auto;
    max-width: 35%;
    width: auto;
    max-height: 350px;
}

.box-video video, .box-video img {
    height: 100%;
    width: 100%;
    object-fit: cover;
    border-radius: 10px;
    box-shadow: rgba(0,0,0,0.07000000000000001) 0px 8px 10px 1px, rgba(0,0,0,0.06) 0px 3px 14px 2px, rgba(0,0,0,0.1) 0px 5px 5px -3px;
}

.img-container {
    position: relative;
    height: 30vw;
}

.img-container img {
    filter: drop-shadow(5px 0px 10px black);
}

.lk-normal {
    width: 100%;
    position: absolute;
}

.lk-comic {
    width: 100%;
    position: absolute;
    /*-webkit-filter: invert(1);
    filter: invert(1);*/
}

.lk-comic {
    clip-path: inset(100% 0 0 0);
}


/* Clearfix */
.part-1::after {
    content: "";
    display: table;
    clear: both;
}

/* Footer */
footer {
    background: var(--footercolor);
    color: #fff;
    text-align: center;
    padding: 10px 0;
    min-height: 300px;
    display: flex;
    justify-content: center;
}

footer h1, footer h2, footer p {
    color: #6931FF;
}

footer div {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
}

.github-button {
    border: 1px solid lightgrey;
    font-size: 16px;
    font-weight: bold;
    border-radius: 15px;
    padding: 10px;
    background: white;
    color: black;
    text-decoration: none;
    margin: 15px;
    box-shadow: rgba(0,0,0,0.07000000000000001) 0px 8px 10px 1px, rgba(0,0,0,0.06) 0px 3px 14px 2px, rgba(0,0,0,0.1) 0px 5px 5px -3px;
}

.item.filled.fact {
    justify-content: flex-start;
}

.scroll-sequence__content {
    padding: 4em;   
}

.scroll-sequence {
    position: sticky;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 0;
    height: 100vh;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
}



/* GSAP HORIZONTAL SCROLL */

.horizontal-scroller {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 20px;
    width: 100%;
    height: 100vh;
}
  
.horizontal-wrapper {
width: 100%;
height: 100vh;
}

.horizontal-container {
width: 100%;
height: 100vh;
margin-top: 2em;
}

.row {
display: flex;
justify-content: flex-start;
gap: 5px;
}

.item {
padding: 2vw;
border-radius: 5vw;
box-sizing: border-box;
font-size: 2vw;
display: flex;
flex-direction: column;
justify-content: space-between;
align-items: flex-start;
height: 80vh;
color: white;
font-weight: normal;
min-width: 30vw;
max-width: 50vw;
}

.item > p {
margin: 0;
}

.item-link {
border-bottom: 1px solid black;
align-self: flex-end;
}

.horizontal-container p, .horizontal-container h1, .horizontal-container h2, .horizontal-container h3, .horizontal-container h4, .horizontal-container h5 ,.horizontal-container h6, .horizontal-container a {
    color: var(--linkcolor);
    background-color: rgba(0,0,0,0.4);
    padding: 0 20px;
    border-radius: 15px;
}

.horizontal-container .filled:nth-of-type(3) p, .horizontal-container .filled:nth-of-type(6) p, .horizontal-container .filled:nth-of-type(3) h3, .horizontal-container .filled:nth-of-type(6) h3{
    background-color: transparent;
    color: black;
}

.filled:nth-of-type(1) {
    background-image: url(assets/horizontal-pic1.jpg);
}
.filled:nth-of-type(2) {
    background-image: url(assets/horizontal-pic2.jpg);
}
.filled:nth-of-type(4) {
    background-image: url(assets/horizontal-pic3.jpg);
}
.filled:nth-of-type(5) {
    background-image: url(assets/horizontal-pic4.jpg);
}
.filled:nth-of-type(7) {
    background-image: url(assets/horizontal-pic5.jpg);
}
.filled:nth-of-type(8) {
    background-image: url(assets/horizontal-pic6.jpg);
}

